--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@gsap/react": "^2.1.1",
     "animate.css": "^4.1.1",
+    "clsx": "^2.1.1",
     "eslint-config-prettier": "^9.1.0",
     "gsap": "^3.12.5",
     "next": "14.2.3",
