--- a/.hintrc
+++ b/.hintrc
@@ -16,6 +16,13 @@
           "scale"
         ]
       }
+    ],
+    "no-inline-styles": "off",
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   }
 }
